--- a/html5up-strongly-typed/index.html
+++ b/html5up-strongly-typed/index.html
@@ -27,8 +27,8 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li><a class="icon fa-home" href="index.html"><span>Introduction</span></a></li>
-									<li>
+									<li><a class="icon fa-home" href="index.html"><span>Home</span></a></li>
+									<!-- <li>
 										<a href="#" class="icon fa-bar-chart-o"><span>Dropdown</span></a>
 										<ul>
 											<li><a href="#">Lorem ipsum dolor</a></li>
@@ -44,10 +44,10 @@
 											</li>
 											<li><a href="#">Veroeros feugiat</a></li>
 										</ul>
-									</li>
-									<li><a class="icon fa-cog" href="left-sidebar.html"><span>Left Sidebar</span></a></li>
-									<li><a class="icon fa-retweet" href="right-sidebar.html"><span>Right Sidebar</span></a></li>
-									<li><a class="icon fa-sitemap" href="no-sidebar.html"><span>No Sidebar</span></a></li>
+									</li> -->
+									<li><a class="icon fa-question" href="left-sidebar.html"><span>About Us</span></a></li>
+									<li><a class="icon fa-user" href="right-sidebar.html"><span>Sign Up</span></a></li>
+									<li><a class="icon fa-sign-in" href="no-sidebar.html"><span>Login</span></a></li>
 								</ul>
 							</nav>
 
@@ -289,7 +289,7 @@
 						<div class="row">
 							<div class="6u 12u(mobile)">
 								<section>
-									<form method="post" action="#">
+									<form method="post" action="#">`
 										<div class="row 50%">
 											<div class="6u 12u(mobile)">
 												<input name="name" placeholder="Name" type="text" />
