Fixed password field in Sign Up

--- a/html5up-strongly-typed/sign-up.html
+++ b/html5up-strongly-typed/sign-up.html
@@ -76,7 +76,7 @@
 											</div>
 											<br>
 											<div class="6u 12u(mobile)">
-													<input name="email" placeholder="Email" type="text" />
+													<input name="email" placeholder="Email" type="email" />
 											</div>
 											<br>
 											<div class="6u 12u(mobile)">
