Updated headers with correct links

--- a/html5up-strongly-typed/sign-up.html
+++ b/html5up-strongly-typed/sign-up.html
@@ -46,9 +46,9 @@
 											<li><a href="#">Veroeros feugiat</a></li>
 										</ul>
 									</li> -->
-									<li><a class="icon fa-question" href="left-sidebar.html"><span>About Us</span></a></li>
+									<li><a class="icon fa-question" href="about-us.html"><span>About Us</span></a></li>
 									<li><a class="icon fa-user" href="sign-up.html"><span>Sign Up</span></a></li>
-									<li><a class="icon fa-sign-in" href="no-sidebar.html"><span>Login</span></a></li>
+									<li><a class="icon fa-sign-in" href="login.html"><span>Login</span></a></li>
 								</ul>
 							</nav>
 
