--- a/html5up-strongly-typed/sign-up.html
+++ b/html5up-strongly-typed/sign-up.html
@@ -94,7 +94,7 @@
 									</div>-->
 									<div class="row">
 										<div class="12u">
-											<a href="#" class="form-button-submit button icon fa-envelope">Send Message</a>
+											<a href="#" class="form-button-submit button">Submit</a>
 										</div>
 									</div>
 								</form>
