--- a/html5up-strongly-typed/login.html
+++ b/html5up-strongly-typed/login.html
@@ -23,7 +23,7 @@
 
 						<!-- Logo -->
 							<h1 id="logo"><a href="index.html">Avocado Emporium</a></h1>
-							<p>A responsive HTML5 site template. Manufactured by HTML5 UP.</p>
+							<p>We bring you avocados from around the world. Sign up now to get started!</p>
 
 						<!-- Nav -->
 							<nav id="nav">
