Partial ly complete home page and updated images

--- a/html5up-strongly-typed/index.html
+++ b/html5up-strongly-typed/index.html
@@ -59,20 +59,18 @@
 				<div id="features-wrapper">
 					<section id="features" class="container">
 						<header>
-							<h2>Gentlemen, behold! This is <strong>Strongly Typed</strong>!</h2>
+							<h2><strong>Avocado:</strong> a pear-shaped fruit with a rough leathery<br>skin, smooth oily edible flesh, and a large stone</h2>
 						</header>
 						<div class="row">
 							<div class="4u 12u(mobile)">
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+										<a class="image featured"><img src="images/avocado2.png" alt="" /></a>
 										<header>
-											<h3>Okay, so what is this?</h3>
+											<h3>Health</h3>
 										</header>
-										<p>This is <strong>Strongly Typed</strong>, a free, fully responsive site template
-										by <a href="http://html5up.net">HTML5 UP</a>. Free for personal and commercial use under the
-										<a href="http://html5up.net/license">CCA 3.0 license</a>.</p>
+										<p>Avocados are both delicious and nutritious! This superfood is not only tasty but has been proven to improve cardiovascular health, regulate blood pressure, and promote clearer skin.</p>
 									</section>
 
 							</div>
@@ -80,13 +78,11 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+										<a class="image featured"><img src="images/avocado1.png" alt="" /></a>
 										<header>
-											<h3>Nice! What is HTML5 UP?</h3>
+											<h3>Culture</h3>
 										</header>
-										<p><a href="http://html5up.net">HTML5 UP</a> is a side project of <a href="http://twitter.com/ajlkn">AJ’s</a> (= me).
-										I started it as a way to both test my <strong>skel</strong> framework and sharpen up my coding
-										and design skills a bit.</p>
+										<p>A subscription to the Avocado Emporium means an open door to a world of knowledge. As a member, you gain access to the history and cultural impact of the avocado in its indigenous environments.</p>
 									</section>
 
 							</div>
@@ -94,19 +90,17 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+										<a class="image featured"><img src="images/avocado3.png" alt="" /></a>
 										<header>
-											<h3>Skel? What's that?</h3>
+											<h3>Taste</h3>
 										</header>
-										<p><strong>Skel</strong> is a lightweight framework for building responsive
-										sites and apps. All of my stuff at <a href="http://html5up.net">HTML5 UP</a> (including this
-										one) are built on this framework.</p>
+										<p>You don't have to be Ina Garten to cook with avocados! Each avocado delivery includes a variety of recipes using seasonal ingredients that you can find at any farmer's market or grocery store.</p>
 									</section>
 
 							</div>
 						</div>
 						<ul class="actions">
-							<li><a href="#" class="button icon fa-file">Tell Me More</a></li>
+							<li><a href="about-us.html" class="button">Learn More</a></li>
 						</ul>
 					</section>
 				</div>
