Updated About Us page

--- a/html5up-strongly-typed/about-us.html
+++ b/html5up-strongly-typed/about-us.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>No Sidebar - Strongly Typed by HTML5 UP</title>
+		<title>About Us</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -29,23 +29,6 @@
 							<nav id="nav">
 								<ul>
 									<li><a class="icon fa-home" href="index.html"><span>Home</span></a></li>
-									<!-- <li>
-										<a href="#" class="icon fa-bar-chart-o"><span>Dropdown</span></a>
-										<ul>
-											<li><a href="#">Lorem ipsum dolor</a></li>
-											<li><a href="#">Magna phasellus</a></li>
-											<li><a href="#">Etiam dolore nisl</a></li>
-											<li>
-												<a href="#">Phasellus consequat</a>
-												<ul>
-													<li><a href="#">Magna phasellus</a></li>
-													<li><a href="#">Etiam dolore nisl</a></li>
-													<li><a href="#">Phasellus consequat</a></li>
-												</ul>
-											</li>
-											<li><a href="#">Veroeros feugiat</a></li>
-										</ul>
-									</li> -->
 									<li><a class="icon fa-question" href="about-us.html"><span>About Us</span></a></li>
 									<li><a class="icon fa-user" href="sign-up.html"><span>Sign Up</span></a></li>
 									<li><a class="icon fa-sign-in" href="login.html"><span>Login</span></a></li>
@@ -63,72 +46,48 @@
 							<!-- Post -->
 								<article class="box post">
 									<header>
-										<h2>Behold! This is the <strong>no sidebar</strong> layout<br />
-										with no sidebar at all!</h2>
+										<h2><strong>Avocado Emporium</strong>, the first stop to a healthy lifestyle</h2>
 									</header>
-									<span class="image featured"><img src="images/pic04.jpg" alt="" /></span>
-									<h3>And yeah, that's basically it</h3>
-									<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
-									ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
-									sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
-									in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-									magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros
-									consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-									justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-									mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique.
-									Curabitur leo nibh, rutrum eu malesuada in, tristique at erat.</p>
-									<p>Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat
-									Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit ligula
-									vel quam viverra sit amet mollis tortor congue. Sed quis mauris sit amet
-									magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada in,
-									tristique at erat. Curabitur leo nibh, rutrum eu malesuada  in, tristique
-									at erat lorem ipsum dolor sit amet lorem ipsum sed consequat magna
-									tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros consequat
-									magna tempus</p>
-									<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
-									ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
-									sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
-									in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-									consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-									in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-									magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros
-									consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-									justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-									mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique.
-									Curabitur leo nibh, rutrum eu malesuada in, tristique at erat.</p>
-									<h3>Accumsan lorem ipsum veroeros</h3>
-									<p>Consequat Phasellus laoreet massa id in, tristique at erat lorem
-									ipsum dolor sit amet lorem ipsum sed consequat magna tempus veroeros
-									consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-									justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-									mollis tortor congue. Sed quis mauris sit amet magna.</p>
-									<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
-									ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
-									sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
-									in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-									consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-									in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-									magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros
-									consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-									justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-									mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique.
-									Curabitur leo nibh, rutrum eu malesuada in, tristique at erat.</p>
-									<h3>Ligula suspcipit fusce veroeros</h3>
-									<p>Nullam dolore etiam sed massa id in, tristique at erat lorem
-									ipsum dolor sit amet lorem ipsum sed consequat magna tempus veroeros
-									consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-									justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-									mollis tortor congue. Sed quis mauris sit amet magna.</p>
-									<p>Sed massa id justo mattis pharetra. Fusce suscipit
-									ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
-									sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
-									in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-									consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-									in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-									magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros
-									consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-									justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-									mollis tortor congue. Sed quis mauris sit amet magna accumsan.</p>
+									<span class="image featured"><img src="images/avocado-bunches.jpg" alt="Avocados" /></span>
+									<h3>Avocados? Why?</h3>
+									<p>Avocados are green, pear-shaped fruit loaded with important nutrients.
+										A single serving of avocado contains <strong>over 10%</strong> of your recommended daily
+										allowance of Vitamins B5, B6, C, E as well as <strong>over 20%</strong> of your recommended
+										daily allowance of Folate, and Vitmain K. Thats in addition to the
+										Magnesium, Manganese, Copper, Iron, Zinc, Phosphorous, Vitamin A, B1, B2, and B3
+										that they contain. Wow!
+									</p>
+									<p>Don't forget Potassium, most Americans do. An average adult only gets half of their
+										recommended daily allowance of Potassium.
+										[<a href="http://www.fasebj.org/content/27/1_Supplement/621.7">Source</a>]
+										Avocados are loaded with potassium, containing 140% more than a banana. You don't miss out on any
+										important nutrients when you eat avocados, especially fresh ones from Avocado Emporium. Delivered to your
+										door just days after they're picked off the tree and ensured for the utmost quality, our avocados contain
+										more nutrients than any plain old avocado from a grocery store.
+									</p>
+									<h3>Avocado Emporium is here to help</h3>
+									<p>Avocado Emporium has been delivering avocados to our wonderful customers for over 50 years, 
+										before they were cool. But what good is an avocado without a way to eat it? Our subscribers
+										receive our monthly <i>Avocado Digest</i> which is filled with great resources at no additional charge.
+										Ever wonder what kind of spices to put on your avocado toast or how Ariane Grande eats her morning 'cado?
+										These questions and more are answered in <i>Avocado Digest</i>. In addition, by becoming an Avocado Emporium
+										member, you join an exclusive group of other avocado enthusiast, who truly understand what it means to eat 
+										an avocado. It's not just a food, it's a lifestyle.
+									</p>
+									<p>In the end though, an avocado is only as good as how it tastes. Avocado Emporium has the leading experts
+										on Avocado Science to ensure the utmost quality of all our avocados before they ever reach your door. Sourced
+										from California, Mexico, Peru and more, we have all the avocados you could ever want, for every occasion.
+									</p>
+									
+									<h3>Company History</h3>
+									<p>Avocado Emporium was founded on a simple dream all the way back in 1965, to make avocados great again. From a lowly 
+										farmhouse in southern California to a world leader in agriculture, Avocado Emporium has strived to reach that goal through
+										innovation and determination for over 50 years. Avocado Emporium 
+										approved farmers use only the best methods and techniques to ensure that our avocados are the freshest and best tasting
+										avocados on this planet. We are the leading employer of avocado farmers in the world, ensuring fair working
+										conditions and wages for all of our employees, as well as the best health care in the agriculture industry.
+									</p>
+									
 								</article>
 
 						</div>
