Add link to sign-up on tag line

--- a/html5up-strongly-typed/about-us.html
+++ b/html5up-strongly-typed/about-us.html
@@ -23,7 +23,7 @@
 
 						<!-- Logo -->
 							<h1 id="logo"><a href="index.html">Avocado Emporium</a></h1>
-							<p>We bring you avocados from around the world. Sign up now to get started!</p>
+							<p>We bring you avocados from around the world. <a href="sign-up.html">Sign up</a> now to get started!</p>
 
 						<!-- Nav -->
 							<nav id="nav">
