Add link to sign up on about us page

--- a/html5up-strongly-typed/about-us.html
+++ b/html5up-strongly-typed/about-us.html
@@ -87,9 +87,8 @@
 										avocados on this planet. We are the leading employer of avocado farmers in the world, ensuring fair working
 										conditions and wages for all of our employees, as well as the best health care in the agriculture industry.
 									</p>
-									
+									<div style="text-align:center"><a href="sign-up.html" class="button">Interested? Subscribe today!</a></div>
 								</article>
-
 						</div>
 					</div>
 				</div>
