Update contact footer

--- a/html5up-strongly-typed/sign-up.html
+++ b/html5up-strongly-typed/sign-up.html
@@ -137,38 +137,20 @@
 							</div>
 							<div class="6u 12u(mobile)">
 								<section>
-									<p>Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat Phaselamet
-									mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique. Curabitur
-									leo nibh, rutrum eu malesuada.</p>
+									<p>Want to learn more about the magnificent avocado? Need help perfecting your avocado toast recipe? Call us up, send an email, or drop by our office. We love talking all things avo with enthusiasts like you. Hope to hear from you soon!</p>
 									<div class="row">
 										<div class="6u 12u(mobile)">
 											<ul class="icons">
 												<li class="icon fa-home">
-													1234 Somewhere Road<br />
-													Nashville, TN 00000<br />
+													Olsson 120<br />
+													Charlottesville, VA 22903<br />
 													USA
 												</li>
 												<li class="icon fa-phone">
-													(000) 000-0000
+													(555) AVO-CADO
 												</li>
 												<li class="icon fa-envelope">
-													<a href="#">info@untitled.tld</a>
-												</li>
-											</ul>
-										</div>
-										<div class="6u 12u(mobile)">
-											<ul class="icons">
-												<li class="icon fa-twitter">
-													<a href="#">@untitled-tld</a>
-												</li>
-												<li class="icon fa-instagram">
-													<a href="#">instagram.com/untitled-tld</a>
-												</li>
-												<li class="icon fa-dribbble">
-													<a href="#">dribbble.com/untitled-tld</a>
-												</li>
-												<li class="icon fa-facebook">
-													<a href="#">facebook.com/untitled-tld</a>
+													<a href="#">info@emporium.avo</a>
 												</li>
 											</ul>
 										</div>
