--- a/html5up-strongly-typed/index.html
+++ b/html5up-strongly-typed/index.html
@@ -109,8 +109,8 @@
 				<div id="banner-wrapper">
 					<div class="inner">
 						<section id="banner" class="container">
-							<p>Use this space for <strong>profound thoughts</strong>.<br />
-							Or an enormous ad. Whatever.</p>
+							<p>Making avocados great again since 1965</p>
+							<a style="color:white" href="sign-up.html">Join the movement today</a>
 						</section>
 					</div>
 				</div>
