Change slogan; remove footer; add contact us page

--- a/html5up-strongly-typed/contact-us.html
+++ b/html5up-strongly-typed/contact-us.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Login</title>
+		<title>Contact Us</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -14,7 +14,7 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	</head>
-	<body class="no-sidebar">
+	<body class="homepage">
 		<div id="page-wrapper">
 
 			<!-- Header -->
@@ -56,52 +56,68 @@
 					</div>
 				</div>
 
-			<!-- Main -->
-			<div id="main-wrapper">
-				<div id="main" class="container" style="text-align:center">
-					<header style="text-align:center">
-						<h2>Welcome back!</h2>
-					</header>
-					<div class="row">
-						<div class="12u" align="center">
-							<section>
-								<form method="post" action="#">
-									<div class="row 50%">
-										<div class="12u">
+<!-- Footer -->
+				<div id="footer-wrapper">
+					<div id="footer" class="container">
+						<header>
+							<h2>Questions or comments? <strong>Get in touch:</strong></h2>
+						</header>
+						<div class="row">
+							<div class="6u 12u(mobile)">
+								<section>
+									<form method="post" action="#">`
+										<div class="row 50%">
 											<div class="6u 12u(mobile)">
-												<input name="email" placeholder="Email" type="email" />
+												<input name="name" placeholder="Name" type="text" />
 											</div>
-											<br>
 											<div class="6u 12u(mobile)">
-												<input name="password" placeholder="Password" type="password" />
+												<input name="email" placeholder="Email" type="text" />
 											</div>
 										</div>
-									</div>
-									<!--<div class="row 50%">
-										<div class ="12u">
-											<div class="6u 12u(mobile)">
+										<div class="row 50%">
+											<div class="12u">
 												<textarea name="message" placeholder="Message"></textarea>
 											</div>
-										</div>	
-									</div>-->
+										</div>
+										<div class="row 50%">
+											<div class="12u">
+												<a href="#" class="form-button-submit button icon fa-envelope">Send Message</a>
+											</div>
+										</div>
+									</form>
+								</section>
+							</div>
+							<div class="6u 12u(mobile)">
+								<section>
+									<p>Want to learn more about the magnificent avocado? Need help perfecting your avocado toast recipe? Call us up, send an email, or drop by our office. We love talking all things avo with enthusiasts like you. Hope to hear from you soon!</p>
 									<div class="row">
-										<div class="12u">
-											<a href="#" class="form-button-submit button">Log In</a>
+										<div class="6u 12u(mobile)">
+											<ul class="icons">
+												<li class="icon fa-home">
+													Olsson 120<br />
+													Charlottesville, VA 22903<br />
+													USA
+												</li>
+												<li class="icon fa-phone">
+													(555) AVO-CADO
+												</li>
+												<li class="icon fa-envelope">
+													<a href="#">info@emporium.avo</a>
+												</li>
+											</ul>
 										</div>
 									</div>
-								</form>
-							</section>
+								</section>
+							</div>
 						</div>
 					</div>
-				</div>
-			</div>
-			<div id="copyright" class="container">
+					<div id="copyright" class="container">
 						<ul class="links">
 							<li>Copyright &copy; 1965-2017 Avocado Emporium. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</div>
-
-		</div>
+				</div>
+				</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
