--- a/html5up-strongly-typed/sign-up.html
+++ b/html5up-strongly-typed/sign-up.html
@@ -23,7 +23,7 @@
 
 						<!-- Logo -->
 							<h1 id="logo"><a href="index.html">Avocado Emporium</a></h1>
-							<p>We bring you avocados from around the world. <a href="sign-up.html">Sign up</a> now to get started!</p>
+							<p>Get avocados monthly from around the world. <a href="sign-up.html">Sign up</a> now to get started!</p>
 
 						<!-- Nav -->
 							<nav id="nav">
@@ -49,6 +49,7 @@
 									<li><a class="icon fa-question" href="about-us.html"><span>About Us</span></a></li>
 									<li><a class="icon fa-user" href="sign-up.html"><span>Sign Up</span></a></li>
 									<li><a class="icon fa-sign-in" href="login.html"><span>Login</span></a></li>
+									<li><a class="icon fa-phone" href="contact-us.html"><span>Contact Us</span></a></li>
 								</ul>
 							</nav>
 
@@ -103,68 +104,11 @@
 					</div>
 				</div>
 			</div>
-
-			<!-- Footer -->
-				<div id="footer-wrapper">
-					<div id="footer" class="container">
-						<header>
-							<h2>Questions or comments? <strong>Get in touch:</strong></h2>
-						</header>
-						<div class="row">
-							<div class="6u 12u(mobile)">
-								<section>
-									<form method="post" action="#">
-										<div class="row 50%">
-											<div class="6u 12u(mobile)">
-												<input name="name" placeholder="Name" type="text" />
-											</div>
-											<div class="6u 12u(mobile)">
-												<input name="email" placeholder="Email" type="text" />
-											</div>
-										</div>
-										<div class="row 50%">
-											<div class="12u">
-												<textarea name="message" placeholder="Message"></textarea>
-											</div>
-										</div>
-										<div class="row 50%">
-											<div class="12u">
-												<a href="#" class="form-button-submit button icon fa-envelope">Send Message</a>
-											</div>
-										</div>
-									</form>
-								</section>
-							</div>
-							<div class="6u 12u(mobile)">
-								<section>
-									<p>Want to learn more about the magnificent avocado? Need help perfecting your avocado toast recipe? Call us up, send an email, or drop by our office. We love talking all things avo with enthusiasts like you. Hope to hear from you soon!</p>
-									<div class="row">
-										<div class="6u 12u(mobile)">
-											<ul class="icons">
-												<li class="icon fa-home">
-													Olsson 120<br />
-													Charlottesville, VA 22903<br />
-													USA
-												</li>
-												<li class="icon fa-phone">
-													(555) AVO-CADO
-												</li>
-												<li class="icon fa-envelope">
-													<a href="#">info@emporium.avo</a>
-												</li>
-											</ul>
-										</div>
-									</div>
-								</section>
-							</div>
-						</div>
-					</div>
-					<div id="copyright" class="container">
+			<div id="copyright" class="container">
 						<ul class="links">
-							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>Copyright &copy; 1965-2017 Avocado Emporium. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</div>
-				</div>
 
 		</div>
 
