Fix various spacing and background image on signup/login

--- a/login.html
+++ b/login.html
@@ -57,10 +57,10 @@
 				</div>
 
 			<!-- Main -->
-			<div id="main-wrapper">
+			<div id="transparent">
 				<div id="main" class="container" style="text-align:center">
 					<header style="text-align:center">
-						<h2>Welcome back!</h2>
+						<h2 style="color:#fff">Welcome back!</h2>
 					</header>
 					<div class="row">
 						<div class="12u" align="center">
@@ -89,6 +89,7 @@
 											<a href="#" class="form-button-submit button">Log In</a>
 										</div>
 									</div>
+									<br>
 								</form>
 							</section>
 						</div>
