--- a/sign-up.html
+++ b/sign-up.html
@@ -57,10 +57,10 @@
 				</div>
 
 			<!-- Main -->
-			<div id="main-wrapper">
+			<div id="transparent">
 				<div id="main" class="container" style="text-align:center">
 					<header style="text-align:center">
-						<h2>Sign Up</h2>
+						<h2 style="color:#fff">Sign Up</h2>
 					</header>
 					<div class="row">
 						<div class="12u" align="center">
@@ -110,6 +110,7 @@
 											<input type="submit">
 										</div>
 									</div>
+									<br>
 								</form>
 							</section>
 						</div>
