--- a/about-us.html
+++ b/about-us.html
@@ -12,7 +12,7 @@
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	</head>
 	<body class="no-sidebar">
 		<div id="page-wrapper">
@@ -51,42 +51,37 @@
 									</header>
 									<span class="image featured"><img src="images/avocado-bunches.jpg" alt="Avocados" /></span>
 									<h3>Avocados? Why?</h3>
-									<p>Avocados are green, pear-shaped fruit loaded with important nutrients.
+									<div class="row">
+									<p class="7u">Avocados are green, pear-shaped fruit loaded with important nutrients.
 										A single serving of avocado contains <strong>over 10%</strong> of your recommended daily
 										allowance of Vitamins B5, B6, C, E as well as <strong>over 20%</strong> of your recommended
 										daily allowance of Folate, and Vitmain K. Thats in addition to the
 										Magnesium, Manganese, Copper, Iron, Zinc, Phosphorous, Vitamin A, B1, B2, and B3
-										that they contain. Wow!
-									</p>
-									<p>Don't forget Potassium, most Americans do. An average adult only gets half of their
+										that they contain. Wow!<br><br>
+										Don't forget Potassium, most Americans do. An average adult only gets half of their
 										recommended daily allowance of Potassium.
 										[<a href="http://www.fasebj.org/content/27/1_Supplement/621.7">Source</a>]
-										Avocados are loaded with potassium, containing 140% more than a banana. You don't miss out on any
+										<strong>Avocados are loaded with potassium,</strong> containing 140% more than a banana. You don't miss out on any
 										important nutrients when you eat avocados, especially fresh ones from Avocado Emporium. Delivered to your
-										door just days after they're picked off the tree and ensured for the utmost quality, our avocados contain
+										door just days after they're picked off the tree and ensured for the <strong>utmost quality</strong>, our avocados contain
 										more nutrients than any plain old avocado from a grocery store.
 									</p>
+									<img style="height:380px" src="images/avocado4.png"/>
+									</div>
 									<h3>Avocado Emporium is here to help</h3>
-									<p>Avocado Emporium has been delivering avocados to our wonderful customers for over 50 years, 
-										before they were cool. But what good is an avocado without a way to eat it? Our subscribers
-										receive our monthly <i>Avocado Digest</i> which is filled with great resources at no additional charge.
-										Ever wonder what kind of spices to put on your avocado toast or how Ariane Grande eats her morning 'cado?
-										These questions and more are answered in <i>Avocado Digest</i>. In addition, by becoming an Avocado Emporium
+									<div class="row">
+									<img style="height:360px" src="images/avocado5.png"/>
+									<p class="7u">Avocado Emporium has been delivering avocados to our wonderful customers for <strong>over 50 years,</strong> before they were cool. But what good is an avocado without ways to eat it? Subscribers
+										receive our monthly <i>Avocado Digest</i> which is filled with great resources at <strong>no additional charge.</strong>Ever wonder what kind of spices to put on your avo toast or how Ariane Grande eats her morning 'cado?
+										These questions and more are answered in <i>Avocado Digest</i>. By becoming an Avocado Emporium
 										member, you join an exclusive group of other avocado enthusiast, who truly understand what it means to eat 
-										an avocado. It's not just a food, it's a lifestyle.
+										an avocado. It's not just a food, <strong>it's a lifestyle.</strong>
+										<br><br>
+										In the end though, an avocado is only as good as how it tastes. Avocado Emporium has the <strong>leading experts</strong> on Avocado Science to ensure the utmost quality of all our avocados before they ever reach your door. Sourced from California, Mexico, Peru and more, we have all the avocados you could ever want, for every occasion.
 									</p>
-									<p>In the end though, an avocado is only as good as how it tastes. Avocado Emporium has the leading experts
-										on Avocado Science to ensure the utmost quality of all our avocados before they ever reach your door. Sourced
-										from California, Mexico, Peru and more, we have all the avocados you could ever want, for every occasion.
-									</p>
-									
+									</div>
 									<h3>Company History</h3>
-									<p>Avocado Emporium was founded on a simple dream all the way back in 1965, to make avocados great again. From a lowly 
-										farmhouse in southern California to a world leader in agriculture, Avocado Emporium has strived to reach that goal through
-										innovation and determination for over 50 years. Avocado Emporium 
-										approved farmers use only the best methods and techniques to ensure that our avocados are the freshest and best tasting
-										avocados on this planet. We are the leading employer of avocado farmers in the world, ensuring fair working
-										conditions and wages for all of our employees, as well as the best health care in the agriculture industry.
+									<p>Avocado Emporium was founded on a simple dream all the way back in 1965, to <strong>make avocados great again.</strong> From a lowly farmhouse in southern California to a world leader in agriculture, Avocado Emporium has strived to reach that goal through innovation and determination for <strong>over 50 years.</strong> Avocado Emporium approved farmers use only the best methods and techniques to ensure that our avocados are the freshest and best tasting avocados on this planet. We are the leading employer of avocado farmers in the world, ensuring <strong>fair working conditions and wages</strong> for all of our employees, as well as the best health care in the agriculture industry.
 									</p>
 									<div style="text-align:center"><a href="sign-up.html" class="button">Interested? Subscribe today!</a></div>
 									<br>
