--- a/settings.html
+++ b/settings.html
@@ -79,6 +79,8 @@
 										<input type="hidden" name="data" value="CQIyktmrhscM/CBgfLXWh6QOtlsCvXhp8u2JM1oxn/R+qH9qT+njy9AxEkKsz8TmeOaMcvl7kovCEfRVPUgAHyY9C2zYTxMYoGaO08mkoKKAijG2+T7frf0qd5xZDeIH" />
 										<input type="image" src="https://test.bitpay.com/img/button-large.png" style="border:4px solid #209310; border-radius: 10px" name="submit" alt="BitPay, the easy way to pay with bitcoins." >
 									</form>
+									<p id="tenDollarBTC">Loading BTC Exchange rate...</p>
+									
 							</div>
 							<div class="4u 12u(mobile)">
 
@@ -96,6 +98,8 @@
 										<input type="hidden" name="data" value="CQIyktmrhscM/CBgfLXWh6QOtlsCvXhp8u2JM1oxn/R+qH9qT+njy9AxEkKsz8TmeOaMcvl7kovCEfRVPUgAHyY9C2zYTxMYoGaO08mkoKKAijG2+T7frf0qd5xZDeIH" />
 										<input type="image" src="https://test.bitpay.com/img/button-large.png" style="border:4px solid #209310; border-radius: 10px" name="submit" alt="BitPay, the easy way to pay with bitcoins." >
 									</form>
+									<p id="fifteenDollarBTC">Loading BTC Exchange rate...</p>
+									<h3 id="btcRate">Loading BTC Exchange rate...</h3>
 
 							</div>
 							<div class="4u 12u(mobile)">
@@ -114,6 +118,8 @@
 										<input type="hidden" name="data" value="CQIyktmrhscM/CBgfLXWh6QOtlsCvXhp8u2JM1oxn/R+qH9qT+njy9AxEkKsz8TmeOaMcvl7kovCEfRVPUgAHyY9C2zYTxMYoGaO08mkoKKAijG2+T7frf0qd5xZDeIH" />
 										<input type="image" src="https://test.bitpay.com/img/button-large.png" style="border:4px solid #209310; border-radius: 10px" name="submit" alt="BitPay, the easy way to pay with bitcoins." >
 									</form>
+									<p id="twentyDollarBTC">Loading BTC Exchange rate...</p>
+									
 							</div>
 						</div>
 						<!--<ul class="actions">
@@ -138,6 +144,7 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/bitcoinPrice.js"></script>
 
 	</body>
 </html>
