Fixed bitcoin pay buttons

--- a/settings.html
+++ b/settings.html
@@ -74,11 +74,11 @@
 										<p>Avocados are both delicious and nutritious! This superfood is not only tasty but has been proven to improve cardiovascular health, regulate blood pressure, and promote clearer skin.</p>
 									</section>
 									<form action="https://test.bitpay.com/checkout" method="post" >
-  										<input type="hidden" name="action" value="checkout" />
+										<input type="hidden" name="action" value="checkout" />
 										<input type="hidden" name="posData" value="" />
-										<input type="hidden" name="data" value="CQIyktmrhscM/CBgfLXWh6QOtlsCvXhp8u2JM1oxn/R+qH9qT+njy9AxEkKsz8TmeOaMcvl7kovCEfRVPUgAHyY9C2zYTxMYoGaO08mkoKKAijG2+T7frf0qd5xZDeIH" />
-										<input type="image" src="https://test.bitpay.com/img/button-large.png" style="border:4px solid #209310; border-radius: 10px" name="submit" alt="BitPay, the easy way to pay with bitcoins." >
-									</form>
+										<input type="hidden" name="data" value="eKH0j0sYXbTiSddl+h3PMxh2yaYuj0Aj7i8XzT9bYLYwcT9/U7jebphc9ZM/C2isEnYKUq1EEiXuTuphg5zVe4Y/pAAhf6HC8jEzanwn/PjrMCI69DPa+fKe5EkDkt9Nogde5yf7X+eU0aGuOnjc1DABODfAk6RhR2dFx6icdoWay4vO7xSLLp08rquOdZ4kallztylW15jxFaml3l57zg==" />
+										<input type="image" src="https://test.bitpay.com/img/button-large.png" border="0" name="submit" alt="BitPay, the easy way to pay with bitcoins." >
+									  </form>
 									<p id="tenDollarBTC">Loading BTC Exchange rate...</p>
 									
 							</div>
@@ -93,11 +93,11 @@
 										<p>A subscription to the Avocado Emporium means an open door to a world of knowledge. As a member, you gain access to the history and cultural impact of the avocado in its indigenous environments.</p>
 									</section>
 									<form action="https://test.bitpay.com/checkout" method="post" >
-  										<input type="hidden" name="action" value="checkout" />
+										<input type="hidden" name="action" value="checkout" />
 										<input type="hidden" name="posData" value="" />
-										<input type="hidden" name="data" value="CQIyktmrhscM/CBgfLXWh6QOtlsCvXhp8u2JM1oxn/R+qH9qT+njy9AxEkKsz8TmeOaMcvl7kovCEfRVPUgAHyY9C2zYTxMYoGaO08mkoKKAijG2+T7frf0qd5xZDeIH" />
-										<input type="image" src="https://test.bitpay.com/img/button-large.png" style="border:4px solid #209310; border-radius: 10px" name="submit" alt="BitPay, the easy way to pay with bitcoins." >
-									</form>
+										<input type="hidden" name="data" value="eKH0j0sYXbTiSddl+h3PMxh2yaYuj0Aj7i8XzT9bYLYwcT9/U7jebphc9ZM/C2isI3/vHnryE9Or1wUZQd2gQ2j4vtIBuqRzvwuxGq0KLsi5fLg5EsizeyF/NWvb3QtKkRquMt2m7SuHVFmlHkYXoA1YN5/RarqhOznPSIDB3zethSrJ0i0K8AgEYnRe5RtXMyde2jlBBiWQgyBoPFpfUw==" />
+										<input type="image" src="https://test.bitpay.com/img/button-large.png" border="0" name="submit" alt="BitPay, the easy way to pay with bitcoins." >
+									  </form>
 									<p id="fifteenDollarBTC">Loading BTC Exchange rate...</p>
 									<h3 id="btcRate">Loading BTC Exchange rate...</h3>
 
@@ -113,11 +113,11 @@
 										<p>You don't have to be Ina Garten to cook with avocados! Each avocado delivery includes a variety of recipes using seasonal ingredients that you can find at any farmer's market or grocery store.</p>
 									</section>
 									<form action="https://test.bitpay.com/checkout" method="post" >
-  										<input type="hidden" name="action" value="checkout" />
+										<input type="hidden" name="action" value="checkout" />
 										<input type="hidden" name="posData" value="" />
-										<input type="hidden" name="data" value="CQIyktmrhscM/CBgfLXWh6QOtlsCvXhp8u2JM1oxn/R+qH9qT+njy9AxEkKsz8TmeOaMcvl7kovCEfRVPUgAHyY9C2zYTxMYoGaO08mkoKKAijG2+T7frf0qd5xZDeIH" />
-										<input type="image" src="https://test.bitpay.com/img/button-large.png" style="border:4px solid #209310; border-radius: 10px" name="submit" alt="BitPay, the easy way to pay with bitcoins." >
-									</form>
+										<input type="hidden" name="data" value="eKH0j0sYXbTiSddl+h3PMxh2yaYuj0Aj7i8XzT9bYLYwcT9/U7jebphc9ZM/C2isxEtLe6c9ZEoaDcD/D08C0oXxi9zLZ/9Ceku5Q0tPKPaPR9BHkNXuerw9lAPCjeAwUm17Jd/oa7KB45QPIAeU86Jnk7T82qPHi+kFTonujn1/+do47XpKAr+g3jPnmj+OANt6Ty3NZ3BA9yKEI9m0mg==" />
+										<input type="image" src="https://test.bitpay.com/img/button-large.png" border="0" name="submit" alt="BitPay, the easy way to pay with bitcoins." >
+									  </form>
 									<p id="twentyDollarBTC">Loading BTC Exchange rate...</p>
 									
 							</div>
