add login verification and sessions

--- a/login.html
+++ b/login.html
@@ -65,7 +65,7 @@
 					<div class="row">
 						<div class="12u" align="center">
 							<section>
-								<form method="post" action="#">
+								<form method="post" action="login.php">
 									<div class="row 50%">
 										<div class="12u">
 											<div class="6u 12u(mobile)">
@@ -86,7 +86,7 @@
 									</div>-->
 									<div class="row">
 										<div class="12u">
-											<a href="#" class="form-button-submit button">Log In</a>
+											<input type="submit" value="log in">
 										</div>
 									</div>
 									<br>
